# aws-tag-tools

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  README_zh_CN.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
awstt/: __init__.py  __main__.py  cli.py  config.py  evals.py  executor.py  lambda.py  logger.py  output.py
awstt/worker/: __init__.py  registrable.py  scanner.py  tagger.py  thread.py  types.py  utils.py
awstt/worker/scanners/: ami.py  autoscaling.py  cloudformation.py  cloudfront.py  cloudfront_distribution.py  cloudtrail.py  cloudwatch_alarm.py  cloudwatch_loggroup.py  cloudwatch_rules.py  dynamodb.py  dynamodb_table.py  ebs.py  ec2.py  ec2_ami.py  ec2_autoscaling.py  ec2_ebs.py  ec2_eip.py  ec2_eni.py  ec2_instance.py  ec2_internet_gateway.py  ec2_nat_gateway.py  ec2_network_acl.py  ec2_routetable.py  ec2_securitygroup.py  ec2_snapshot.py  ec2_subnet.py  ec2_vpc.py  ec2_vpc_peering.py  ec2_vpn_gateway.py  efs.py  eip.py  elasticache_cluster.py  elasticache_snapshot.py  elasticsearch.py  elb.py  emr_cluster.py  emr_studio.py  eni.py  iam_policy.py  iam_role.py  (+19 more)
docs/: SPEC.md  SPEC_zh_CN.md  Use-Expression_zh_CN.md  Use-Selector_zh_CN.md
docs/en_US/: JSON-Config.md  Supported-Services.md  Use-Expression.md  Use-Selector.md
docs/zh_CN/: JSON-Config.md  Supported-Services.md  Use-Expression.md  Use-Selector.md
examples/: action-set.json  action-unset.json
requirements/: runtime-cli.txt
